--- a/Task6.Persistence/Task6.Persistence.csproj
+++ b/Task6.Persistence/Task6.Persistence.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Task6.Application\Task6.Application.csproj" />
+      <ProjectReference Include="..\Task6.Domain\Task6.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
