--- a/Task6.Web/Task6.Web.csproj
+++ b/Task6.Web/Task6.Web.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Task6.Persistence\Task6.Persistence.csproj" />
+    </ItemGroup>
+
 </Project>
