--- a/Task6.Web/appsettings.json
+++ b/Task6.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ChatDbStringConnectionDevelop": "Host=localhost;Port=5432;Database=task6_chat;Username=postgres;Password=postqwe"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
