--- a/Task6.Application/Task6.Application.csproj
+++ b/Task6.Application/Task6.Application.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\Task6.Domain\Task6.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    </ItemGroup>
+
 </Project>
