add load message and add signalr

--- a/Task6.Web/appsettings.json
+++ b/Task6.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ChatDbStringConnectionDevelop": "Host=localhost;Port=5432;Database=task6_chat;Username=postgres;Password=postqwe"
+    "ChatDbStringConnectionDevelop": "Host=localhost;Port=5432;Database=task6_chat1;Username=postgres;Password=postqwe"
   },
   "Logging": {
     "LogLevel": {
